--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,15 @@ android {
 }
 
 dependencies {
-
+    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
-    implementation 'io.apisense:rhino-android:1.0'
+    // https://mvnrepository.com/artifact/io.apisense/rhino-android
+    implementation group: 'io.apisense', name: 'rhino-android', version: '1.1.1'
+
+    //   implementation 'io.apisense:rhino-android:1.0'
     //noinspection GradleDynamicVersion
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
