--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
+// https://mvnrepository.com/artifact/io.apisense/rhino-android
+//        implementation group: 'io.apisense', name: 'rhino-android', version: '1.1.1'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
